cluster/apps/startpage/startpage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startpage-deployment
  namespace: startpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: startpage
  template:
    metadata:
      labels:
        app: startpage
    spec:
      containers:
        - name: startpage
          image: loganmarchione/docker-php-startpage:0.3.5
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/html/user_includes
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: startpage-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: startpage-service
  namespace: startpage
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: startpage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startpage-ingress
  namespace: startpage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: startpage.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startpage-service
                port:
                  number: 80
  tls:
    - hosts:
        - startpage.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: startpage-tls
